--- a/app/src/main/res/layout/fragmento_binario.xml
+++ b/app/src/main/res/layout/fragmento_binario.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
+            android:textAllCaps="false"
             android:text="C"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
