--- a/app/src/main/res/layout/fragmento_decimal.xml
+++ b/app/src/main/res/layout/fragmento_decimal.xml
@@ -3,21 +3,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_marginTop="16dp"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+
         <TextView
-            android:id="@+id/txvOperaciones"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:gravity="end" />
-        <TextView
+            android:gravity="end"
+            android:layout_marginTop="16dp"
             android:id="@+id/txvResultado"
             android:layout_width="match_parent"
             android:layout_height="45dp" />
-    </LinearLayout>
+
     <LinearLayout
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
@@ -147,19 +140,19 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:layout_weight=".99"
+            android:layout_weight="13"
             android:id="@+id/btn0"
             android:text="0"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
         <Button
-
+            android:layout_weight="1"
             android:id="@+id/btnPunto"
             android:text="."
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
         <Button
-
+            android:layout_weight="1"
             android:id="@+id/btnIgual"
             android:text="="
             android:layout_width="wrap_content"
