--- a/app/src/main/res/layout/fragmento_binario.xml
+++ b/app/src/main/res/layout/fragmento_binario.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content">
         <Button
             android:textAllCaps="false"
-            android:text="C"
+            android:text="AC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
