--- a/app/src/main/res/layout/fragmento_binario.xml
+++ b/app/src/main/res/layout/fragmento_binario.xml
@@ -3,26 +3,28 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <TextView
+        android:layout_marginTop="26dp"
+        android:id="@+id/txvResultado"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/txvOperaciones"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"/>
-        <TextView
-            android:id="@+id/txvResultado"
-            android:layout_width="match_parent"
-            android:layout_height="45dp" />
-    </LinearLayout>
+        android:layout_height="49dp" />
+
     <LinearLayout
+        android:layout_marginTop="26dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
-            android:textAllCaps="false"
+            android:layout_weight="1"
+            android:id="@+id/btnBinLimpiar"
             android:text="AC"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <Button
+            android:textAllCaps="false"
+            android:layout_weight="1"
+            android:id="@+id/btnBinSuprimir"
+            android:text="Supr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -31,21 +33,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
+            android:id="@+id/btnBin0"
             android:layout_weight="1"
             android:text="0"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
         <Button
+            android:id="@+id/btnBin1"
             android:layout_weight="1"
             android:text="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <Button
+            android:id="@+id/btnBinSuma"
             android:layout_weight="1"
             android:text="+"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <Button
+            android:id="@+id/btnBinIgual"
             android:layout_weight="1"
             android:text="="
             android:layout_width="wrap_content"
